--- a/u_compass/android/app/src/main/res/values/strings.xml
+++ b/u_compass/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Navigation map</string>
+    <string name="app_name">UCompass</string>
     <string name="mapbox_access_token" translatable="false">sk.eyJ1Ijoic2FpdGFtb3VrIiwiYSI6ImNrNjl1aXdkZjBpYXIzZ3Juejh6ZTFkejYifQ.MXApkXvKfA5LL7ZXWVVwJQ</string>
     <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
     <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
